# kicad-si-prelayout

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: models.md
examples/: ibis_series_terminated.si.yml  parallel_terminated.si.yml  series_terminated.si.yml
examples/buffers/: generic_25ohm.ibs
native/cpp/: setup.py
native/cpp/src/: si_core_cpp.cpp
native/rust/: Cargo.toml
native/rust/src/: lib.rs
scripts/: build_native.sh  generate_generic_ibis.py
si_prelayout/: __init__.py  api.py  cli.py
si_prelayout/analyze/: __init__.py  checks.py  sweep.py
si_prelayout/circuit/: __init__.py  mna.py
si_prelayout/domain/: __init__.py  results.py  topology.py
si_prelayout/field2d/: __init__.py  closed_form.py  loss_models.py
si_prelayout/ibis/: __init__.py  buffer.py  parser.py
si_prelayout/io/: __init__.py  topology_yaml.py
si_prelayout/native/: __init__.py
si_prelayout/physics/: __init__.py  crosstalk.py  diffpair.py
si_prelayout/report/: __init__.py  json_report.py  markdown.py
si_prelayout/tline/: __init__.py  lossless.py  lossy.py  vector_fit.py
tests/: test_native.py  test_smoke.py
ui/: app.py
