[package]
name = "si_core_rust"
version = "0.3.0"
edition = "2021"
description = "High-performance SI solvers for si-prelayout (MoC + dense MNA)"
license = "MIT"

[lib]
name = "si_core_rust"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.22"
ndarray = "0.16"
pyo3 = { version = "0.22", features = ["extension-module"] }
